--- a/MegaNepEditor/MegaNepEditor.csproj
+++ b/MegaNepEditor/MegaNepEditor.csproj
@@ -39,9 +39,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Main.cs" />
+    <Compile Include="Cat.cs" />
+    <Compile Include="ExtHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StructStream.cs" />
+    <Compile Include="DPK.cs" />
     <Compile Include="VirtStream.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
